--- a/src/app/component/product/product.component.css
+++ b/src/app/component/product/product.component.css
@@ -1,27 +1,3 @@
-.card-top {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: .25rem;
-}
-
-.item img {
-    width: 64px;
-}
-
-.item {
-    margin: 0px 15px;
-    text-align: center;
-}
-
-.item a:hover {
-    color: blue;
-}
 
 .card {
     padding: 20px;
@@ -33,11 +9,24 @@
     height: 200px;
     margin-bottom: 15px;
     transition: 0.3s ease-in-out;
+    margin: auto;
 }
 
 .card img:hover {
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
+}
+
+.card h1 {
+    text-align: center;
+    color: blue;
+    font-weight: 400;
+
+}
+
+.card p {
+    text-align: center;
+    color: green;
 }
 
 button {
@@ -49,6 +38,10 @@ button {
     display: block;
     margin-top: 500px;
     margin-left: 800px;
+}
+
+.page{
+    margin-left: 360px;
 }
 
 @media screen and (max-width: 960px) {
