--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,34 +1,68 @@
 <ng-container *ngIf="isLoading; else notLoading">
-    <div class="load">
-        <p-progressSpinner></p-progressSpinner>
-    </div>
+  <div class="load">
+      <p-progressSpinner></p-progressSpinner>
+  </div>
 </ng-container>
 <ng-template #notLoading>
+<div class="card">
+  <p-dataView #dv [value]="products" [paginator]="true" [rows]="9" filterBy="name"
+      [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
+      <ng-template pTemplate="header">
+          <div class="flex flex-column md:flex-row md:justify-content-between">
 
- 
-        <div class="flex align-items-center justify-content-between">
-            <span class="p-input-icon-left">
-                <i class="pi pi-search"></i>
-                <input pInputText type="text" placeholder="Search..." [(ngModel)]="searchInput">
-            </span>
-        </div>
-    
-    <div class="container">
-        <div class="row">
-            <ng-container *ngFor="let product of dataSource| paginate: { itemsPerPage: 6, currentPage: p, totalItems: total } | filter:searchInput">
-                <div class="card col-md-3">
-                    <img  [src]="product.image" style="text-align: center;" width="50" alt="" [alt]="product.name" class="shadow-4">
-                    
-                    <h1 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
-                        {{product.name}}</h1>
-                  
-                    <p><strong>Price:</strong> {{product.current_price | currency}}</p>
-                    <button pButton pRipple label="Details" icon="pi pi-plus" (click)="gotoDetails(product)"
-                                class="p-button-success mr-2"></button>
+              <span class="p-input-icon-left mb-2 md:mb-0">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" placeholder="Search..." [(ngModel)]="searchInput"
+                  (input)="handleSearchChange()">
+              </span>
+              <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
+          </div>
+      </ng-template>
+      <ng-template let-product pTemplate="listItem">
+        <div class="listItem-row">
+              <div class="product-list-item">
+                  <div class="product-list-detail">
+                    <img src={{product.image}} alt="dmgpsd" class="imglist" />
+                      <div class="content-list">
+                    <div class="product-name"><h1>{{product.name}}</h1></div>
+                      <i class="pi pi-chart-bar product-category-icon"></i>
+                        <span [style]="product.price_change_percentage_24h < 0 ? {color: 'red'}: ''" class="product-category">{{product.price_change_percentage_24h}}%</span>
+                      <p></p>
+                      <span class="product-price">{{product.current_price| currency}}</span>
+                      <p-rating [ngModel]="product.current_price" [readonly]="true" [cancel]="false"></p-rating>
+                    </div>
                 </div>
-            </ng-container>
-            <div class="page"><pagination-controls (pageChange)="pageChangeEvent($event)"></pagination-controls> </div>
-        </div>
-    </div>
+                  <div class="product-list-action">
+                      <button pButton pRipple label="Details" icon="pi pi-plus" (click)="gotoDetails(product)"
+                      class="p-button-success mr-2"></button>
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+      <ng-template let-product pTemplate="gridItem">
+          <div class="col-12 md:col-4">
+              <div class="product-grid-item card">
+                  <div class="product-grid-item-top">
+                      <div>
+                          <i class="pi pi-tag product-category-icon"></i>
+                          <span class="product-category"><h1>{{product.name}}</h1></span>
+                      </div>
+                  </div>
+                  <div class="product-grid-item-content">
+                    <img [src]="product.image"   class="shadow-4dsdfd">
+                      <div class="product-name"><h1>{{product.name}}</h1></div>
+                      <div [style]="product.price_change_percentage_24h < 0 ? {color: 'red'}: ''" class="product-description" >{{product.price_change_percentage_24h}}%</div>
+                      <p-rating [ngModel]="product.current_price" [readonly]="true" [cancel]="false"></p-rating>
+                  </div>
+                  <div class="product-grid-item-bottom">
+                      <span class="product-price">{{product.current_price| currency}}</span>
+                      <button pButton pRipple label="Details" icon="pi pi-plus" (click)="gotoDetails(product)"
+                                class="p-button-success mr-2"></button>
+
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+  </p-dataView>
+</div>
 </ng-template>
-<p-toast></p-toast>
